// Vitest Snapshot v1

exports[`TreeSelect > multiple work > render work 1`] = `
"<div class=\\"ix-tree-select ix-selector ix-selector-opened ix-selector-single ix-selector-with-suffix ix-selector-md\\">
  <!---->
  <div class=\\"ix-selector-content\\">
    <div class=\\"ix-selector-item\\"><span class=\\"ix-selector-item-label\\">Node 0</span>
      <!---->
    </div>
    <div class=\\"ix-selector-input\\"><input class=\\"ix-selector-input-inner\\" style=\\"opacity: 0;\\" autocomplete=\\"off\\">
      <!---->
    </div>
    <div class=\\"ix-selector-suffix\\"><i class=\\"ix-icon ix-icon-down\\" style=\\"transform: rotate(180deg);\\" role=\\"img\\" aria-label=\\"down\\"></i></div>
  </div>
</div>
<!--teleport start-->
<!--teleport end-->"
`;

exports[`TreeSelect > single work > custom keys work 1`] = `
"<div class=\\"ix-tree-select ix-selector ix-selector-opened ix-selector-single ix-selector-with-suffix ix-selector-md\\">
  <!---->
  <div class=\\"ix-selector-content\\">
    <div class=\\"ix-selector-item\\"><span class=\\"ix-selector-item-label\\">Node 0</span>
      <!---->
    </div>
    <div class=\\"ix-selector-input\\"><input class=\\"ix-selector-input-inner\\" style=\\"opacity: 0;\\" autocomplete=\\"off\\">
      <!---->
    </div>
    <div class=\\"ix-selector-suffix\\"><i class=\\"ix-icon ix-icon-down\\" style=\\"transform: rotate(180deg);\\" role=\\"img\\" aria-label=\\"down\\"></i></div>
  </div>
</div>
<!--teleport start-->
<!--teleport end-->"
`;

exports[`TreeSelect > single work > render work 1`] = `
"<div class=\\"ix-tree-select ix-selector ix-selector-opened ix-selector-single ix-selector-with-suffix ix-selector-md\\">
  <!---->
  <div class=\\"ix-selector-content\\">
    <div class=\\"ix-selector-item\\"><span class=\\"ix-selector-item-label\\">Node 0</span>
      <!---->
    </div>
    <div class=\\"ix-selector-input\\"><input class=\\"ix-selector-input-inner\\" style=\\"opacity: 0;\\" autocomplete=\\"off\\">
      <!---->
    </div>
    <div class=\\"ix-selector-suffix\\"><i class=\\"ix-icon ix-icon-down\\" style=\\"transform: rotate(180deg);\\" role=\\"img\\" aria-label=\\"down\\"></i></div>
  </div>
</div>
<!--teleport start-->
<!--teleport end-->"
`;

exports[`TreeSelect > single work > searchFn work 1`] = `
"<div class=\\"ix-tree-select ix-selector ix-selector-single ix-selector-with-suffix ix-selector-md\\" searchvalue=\\"node\\">
  <!---->
  <div class=\\"ix-selector-content\\">
    <div class=\\"ix-selector-item\\"><span class=\\"ix-selector-item-label\\">Node 0</span>
      <!---->
    </div>
    <div class=\\"ix-selector-input\\"><input class=\\"ix-selector-input-inner\\" style=\\"opacity: 0;\\" autocomplete=\\"off\\">
      <!---->
    </div>
    <div class=\\"ix-selector-suffix\\"><i class=\\"ix-icon ix-icon-down\\" style=\\"transform: rotate(0deg);\\" role=\\"img\\" aria-label=\\"down\\"></i></div>
  </div>
</div>
<!---->"
`;

exports[`TreeSelect > single work > searchFn work 2`] = `
"<div class=\\"ix-tree-select ix-selector ix-selector-single ix-selector-with-suffix ix-selector-md\\" searchvalue=\\"node\\">
  <!---->
  <div class=\\"ix-selector-content\\">
    <div class=\\"ix-selector-item\\"><span class=\\"ix-selector-item-label\\">Node 0</span>
      <!---->
    </div>
    <div class=\\"ix-selector-input\\"><input class=\\"ix-selector-input-inner\\" style=\\"opacity: 0;\\" autocomplete=\\"off\\">
      <!---->
    </div>
    <div class=\\"ix-selector-suffix\\"><i class=\\"ix-icon ix-icon-down\\" style=\\"transform: rotate(0deg);\\" role=\\"img\\" aria-label=\\"down\\"><svg viewBox=\\"0 0 1024 1024\\" focusable=\\"false\\" aria-hidden=\\"true\\" data-icon=\\"down\\">
          <path d=\\"m294.784 411.776 208.192 208.192a12.8 12.8 0 0 0 18.048 0l208.192-208.192a12.8 12.8 0 0 1 18.112 0l27.136 27.2a12.8 12.8 0 0 1 0 18.048l-253.44 253.44a12.8 12.8 0 0 1-18.048 0l-253.44-253.44a12.8 12.8 0 0 1 0-18.048l27.136-27.2a12.8 12.8 0 0 1 18.112 0z\\"></path>
        </svg></i></div>
  </div>
</div>
<!---->"
`;

exports[`TreeSelect > single work > searchFn work 3`] = `
"<div class=\\"ix-tree-select ix-selector ix-selector-single ix-selector-with-suffix ix-selector-md\\" searchvalue=\\"node\\">
  <!---->
  <div class=\\"ix-selector-content\\">
    <div class=\\"ix-selector-item\\"><span class=\\"ix-selector-item-label\\">Node 0</span>
      <!---->
    </div>
    <div class=\\"ix-selector-input\\"><input class=\\"ix-selector-input-inner\\" style=\\"opacity: 0;\\" autocomplete=\\"off\\">
      <!---->
    </div>
    <div class=\\"ix-selector-suffix\\"><i class=\\"ix-icon ix-icon-down\\" style=\\"transform: rotate(0deg);\\" role=\\"img\\" aria-label=\\"down\\"><svg viewBox=\\"0 0 1024 1024\\" focusable=\\"false\\" aria-hidden=\\"true\\" data-icon=\\"down\\">
          <path d=\\"m294.784 411.776 208.192 208.192a12.8 12.8 0 0 0 18.048 0l208.192-208.192a12.8 12.8 0 0 1 18.112 0l27.136 27.2a12.8 12.8 0 0 1 0 18.048l-253.44 253.44a12.8 12.8 0 0 1-18.048 0l-253.44-253.44a12.8 12.8 0 0 1 0-18.048l27.136-27.2a12.8 12.8 0 0 1 18.112 0z\\"></path>
        </svg></i></div>
  </div>
</div>
<!---->"
`;

exports[`TreeSelect > single work > searchable work 1`] = `
"<div class=\\"ix-tree-select ix-selector ix-selector-opened ix-selector-single ix-selector-searchable ix-selector-with-suffix ix-selector-md\\">
  <!---->
  <div class=\\"ix-selector-content\\">
    <div class=\\"ix-selector-item\\"><span class=\\"ix-selector-item-label\\">Node 0</span>
      <!---->
    </div>
    <div class=\\"ix-selector-input\\"><input class=\\"ix-selector-input-inner\\" autocomplete=\\"off\\">
      <!---->
    </div>
    <div class=\\"ix-selector-suffix\\"><i class=\\"ix-icon ix-icon-down\\" style=\\"transform: rotate(0deg);\\" role=\\"img\\" aria-label=\\"down\\"></i></div>
  </div>
</div>
<!--teleport start-->
<!--teleport end-->"
`;

exports[`TreeSelect > single work > searchable work 2`] = `
"<div class=\\"ix-tree-select ix-selector ix-selector-opened ix-selector-single ix-selector-with-suffix ix-selector-md\\">
  <!---->
  <div class=\\"ix-selector-content\\">
    <div class=\\"ix-selector-input\\"><input class=\\"ix-selector-input-inner\\" autocomplete=\\"off\\" style=\\"opacity: 0;\\">
      <!---->
    </div>
    <div class=\\"ix-selector-suffix\\"><i class=\\"ix-icon ix-icon-down\\" style=\\"transform: rotate(180deg);\\" role=\\"img\\" aria-label=\\"down\\"><svg viewBox=\\"0 0 1024 1024\\" focusable=\\"false\\" aria-hidden=\\"true\\" data-icon=\\"down\\">
          <path d=\\"m294.784 411.776 208.192 208.192a12.8 12.8 0 0 0 18.048 0l208.192-208.192a12.8 12.8 0 0 1 18.112 0l27.136 27.2a12.8 12.8 0 0 1 0 18.048l-253.44 253.44a12.8 12.8 0 0 1-18.048 0l-253.44-253.44a12.8 12.8 0 0 1 0-18.048l27.136-27.2a12.8 12.8 0 0 1 18.112 0z\\"></path>
        </svg></i></div>
  </div>
</div>
<!--teleport start-->
<!--teleport end-->"
`;
